force-app/main/default/objects/FEC_Interaction_Routed__e/FEC_Interaction_Routed__e.object-meta.xml
<CustomObject>
    <description>Automatically open Interaction/Case after assignment.</description>
    <label>FEC Interaction Routed</label>
    <pluralLabel>FEC Interaction Routed</pluralLabel>
</CustomObject>