force-app/main/default/objects/FEC_Interaction_Routed__e/fields/CaseId__c.field-meta.xml
<CustomField>
    <fullName>CaseId__c</fullName>
    <label>Case Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>