force-app/main/default/objects/FEC_Interaction_Routed__e/fields/CaseNumber__c.field-meta.xml
<CustomField>
    <fullName>CaseNumber__c</fullName>
    <label>Case Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>