force-app/main/default/objects/FEC_Interaction_Routed__e/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <length>100</length>
    <type>Text</type>
</CustomField>