force-app/main/default/objects/FEC_Interaction_Routed__e/fields/IsReply__c.field-meta.xml
<CustomField>
    <fullName>IsReply__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Reply</label>
    <type>Checkbox</type>
</CustomField>