force-app/main/default/objects/FEC_Interaction_Routed__e/fields/OwnerId__c.field-meta.xml
<CustomField>
    <fullName>OwnerId__c</fullName>
    <label>Owner Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>