force-app/main/default/objects/FEC_Interaction_Routed__e/fields/ParentId__c.field-meta.xml
<CustomField>
    <fullName>ParentId__c</fullName>
    <label>Parent Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>