force-app/main/default/objects/FEC_Interaction_Routed__e/fields/RoutedAt__c.field-meta.xml
<CustomField>
    <fullName>RoutedAt__c</fullName>
    <label>Routed At</label>
    <type>DateTime</type>
</CustomField>