force-app/main/default/objects/FEC_Interaction_Routed__e/fields/SendTo__c.field-meta.xml
<CustomField>
    <fullName>SendTo__c</fullName>
    <label>Send To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>